--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -1,22 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Sanction Screening</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="" routerLinkActive="active-link"  [routerLinkActiveOptions] ="{exact:true}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="archives" routerLinkActive="active-link">Archives</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="list" routerLinkActive="active-link">List</a>
-          </li>
-          
-        </ul>
-      </div>
-    </div>
-  </nav>
+
+
+<h1 style="color:black;">
+ Sanction Screening OF Transaction
+</h1>
+ 
+
+
+<div class="vertical-menu">
+    <a href="#" class="active"  routerLinkActive="active-link"  [routerLinkActiveOptions] ="{exact:true}">Home</a>
+    
+    <a routerLink="archives"  routerLinkActive="active-link">Archives</a>
+    <a routerLink="list"  routerLinkActive="active-link">List </a>
+   
+
+</div>
+
