--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+
+
+
+
+    <br>
+
+    <h1>Upload Transaction File</h1>
+      <div class="drop_box">
+        <header>
+          <h4>Select File here</h4>
+        </header>
+       <br>
+        
+<form action="/action_page.php">
+    <input type="file" id="myFile" name="filename">
+    <br>
+    <br>
+    <input type="submit">
+  </form>
+</div>
+  
+  
+    
+
+ 
+
+
+
+
