--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<div class="container-fluid footer">
+<div class="row">
+    <div class="col--lg-6">
+        <h1>Transaction Sanction</h1>
+       
+    </div>
+   
+   <div class="col-lg-4">
+    <a routerLink="" >Home</a>
+    <a routerLink="archives">Archives</a>
+    <a routerLink="list">List</a>
+</div>
+
+    <div class="col-lg-2">
+   
+    </div>
+</div>
+</div>
