--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,11 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
+   height:100vh;
 }
+:root
+{
+    --primary-color:orange;
+    --secondery-color:white;
+}
+
